# logit

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
src/: alias.rs  atomic.rs  calendar.rs  cli.rs  clock.rs  config.rs  domain.rs  dryrun.rs  error.rs  format.rs  jira.rs  lib.rs  paths.rs  profile.rs  secrets.rs  stats.rs  style.rs  tempo.rs  time_parse.rs  ui.rs
src/mcp/: install.rs  mod.rs  server.rs  tools.rs
src/service/: alias.rs  cache.rs  config.rs  doctor.rs  mod.rs  stats.rs  types.rs  worklog.rs
tests/: calendar.rs  cli_e2e.rs  cli_parse.rs  mcp.rs  paths.rs  setup.rs  snapshots.rs  stats_e2e.rs
tests/snapshots/: snapshots__snapshot_alias_delete_and_cache_clear-2.snap  snapshots__snapshot_alias_delete_and_cache_clear.snap  snapshots__snapshot_alias_set_replace.snap  snapshots__snapshot_aliases_empty.snap  snapshots__snapshot_aliases_populated.snap  snapshots__snapshot_doctor_schema_mismatch.snap  snapshots__snapshot_doctor_with_dotfile_sync.snap  snapshots__snapshot_dry_run.snap  snapshots__snapshot_errors-2.snap  snapshots__snapshot_errors-3.snap  snapshots__snapshot_errors.snap  snapshots__snapshot_log_success.snap  snapshots__snapshot_setup_complete.snap  snapshots__snapshot_stats_today_card.snap  snapshots__snapshot_stats_today_empty.snap  snapshots__snapshot_stats_week.snap  snapshots__snapshot_stats_year.snap
